<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RoomActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CHOOSE_ROOM_INSTR"
            android:id="@+id/chooseInstr"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/fragmentMargin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/roomList"/>


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/roomList"
            app:layout_constraintBottom_toTopOf="@id/createButton"
            app:layout_constraintTop_toBottomOf="@+id/chooseInstr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="?android:layout"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/fragmentMargin"
            android:layout_marginStart="@dimen/fragmentMargin"
            android:layout_marginEnd="@dimen/fragmentMargin"
            android:layout_marginLeft="@dimen/fragmentMargin"
    />

    <Button
            android:text="@string/CREROOM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:text="@string/FRESHROOM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/freshButton"
            app:layout_constraintTop_toBottomOf="@id/createButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>