<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/fragmentMargin"
        tools:context=".activity.TransferActivity">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vguide1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/hguide1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/hguide2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.45"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/hguide3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.55"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/hguide4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.65"/>
        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/hguide5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.75"/>

        <fragment
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:name="edu.duke.ece651.group4.RISK.client.fragment.WorldFragment"
                android:id="@+id/worldFG"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/hguide1"
        />



        <TextView
                android:id="@+id/terr_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CHANGE_TERR_PROMPT"
                app:layout_constraintTop_toTopOf="@id/hguide2"
                app:layout_constraintBottom_toBottomOf="@id/hguide3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/vguide1"
        />

        <Spinner
                android:id="@+id/terr_choices"
                android:prompt="@string/CHOOSE_SRC_INSTRU"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                app:layout_constraintTop_toBottomOf="@id/hguide2"
                app:layout_constraintBottom_toBottomOf="@id/hguide3"
                app:layout_constraintStart_toStartOf="@id/vguide1"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:gravity="center_horizontal"
        />

        <TextView
                android:id="@+id/unit_after_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CHANGE_TYPE_AFTER"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/vguide1"
                app:layout_constraintTop_toBottomOf="@id/hguide3"
                app:layout_constraintBottom_toBottomOf="@id/hguide4"
        />

        <Spinner
                android:id="@+id/type_after_choices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                app:layout_constraintStart_toStartOf="@id/vguide1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hguide3"
                app:layout_constraintBottom_toBottomOf="@id/hguide4"
                android:textAlignment="center"
                android:gravity="center_horizontal"/>

        <TextView
                android:id="@+id/unit_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CHOOSE_TYPE_INSTRU"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/vguide1"
                app:layout_constraintTop_toBottomOf="@id/hguide4"
                app:layout_constraintBottom_toBottomOf="@id/hguide5"
        />

        <Spinner
                android:id="@+id/level_choices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                app:layout_constraintStart_toStartOf="@id/vguide1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hguide4"
                app:layout_constraintBottom_toBottomOf="@id/hguide5"
                android:textAlignment="center"
                android:gravity="center_horizontal"/>

        <TextView
                android:id="@+id/ma_num_TV"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/vguide1"
                app:layout_constraintTop_toTopOf="@id/hguide5"
                app:layout_constraintBottom_toBottomOf="@id/inputNum"
                android:layout_marginTop="@dimen/fragmentMargin"
                android:text="@string/INPUT_NUM_INSTRU"
                android:layout_width="wrap_content"/>

        <EditText android:id="@+id/inputNum"
                  android:layout_height="wrap_content"
                  android:inputType="number"
                  android:layout_width="50dp"
                  app:layout_constraintStart_toStartOf="@id/vguide1"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/hguide5"/>

        <Button
                android:id="@+id/commit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/COMMIT"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputNum"
        />


</androidx.constraintlayout.widget.ConstraintLayout>