<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/fragmentMargin"
        android:layout_marginEnd="@dimen/fragmentMargin"
        android:layout_marginTop="@dimen/fragmentMargin"
        android:layout_marginBottom="@dimen/fragmentMargin"
        tools:context=".activity.BasicOrderActivity" android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vguide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hguide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hguide2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hguide3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hguide4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6"/>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hguide5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65"/>

    <ImageView
            android:id="@+id/world_image_view"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/hguide1"
            app:srcCompat="@android:drawable/ic_menu_mapmode" android:layout_height="0dp"/>

    <TextView
            android:id="@+id/srcText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CHOOSE_SRC_INSTRU"
            app:layout_constraintTop_toTopOf="@id/hguide2"
            app:layout_constraintBottom_toBottomOf="@id/hguide3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vguide1"
           />

    <Spinner
            android:id="@+id/terrSrc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:prompt="@string/CHOOSE_SRC_INSTRU"
            android:spinnerMode="dialog"
            app:layout_constraintTop_toBottomOf="@id/hguide2"
            app:layout_constraintStart_toStartOf="@id/vguide1"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>

    <TextView
            android:id="@+id/destText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CHOOSE_DES_INSTRU"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vguide1"
            app:layout_constraintTop_toBottomOf="@id/hguide3"
            app:layout_constraintBottom_toBottomOf="@id/hguide4"
    />

    <Spinner
            android:id="@+id/terrDes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:prompt="@string/CHOOSE_DES_INSTRU"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toEndOf="@id/vguide1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hguide3"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>

    <TextView
            android:id="@+id/levText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Which level of unit?"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vguide1"
            app:layout_constraintTop_toBottomOf="@id/hguide4"
            app:layout_constraintBottom_toBottomOf="@id/hguide5"
    />

    <Spinner
            android:id="@+id/soldierType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:prompt="@string/CHOOSE_TYPE_INSTRU"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toStartOf="@id/vguide1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hguide4"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>

    <TextView
            android:id="@+id/ma_num_TV"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vguide1"
            app:layout_constraintTop_toTopOf="@id/hguide5"
            app:layout_constraintBottom_toBottomOf="@id/numUnit"
            android:layout_marginTop="@dimen/fragmentMargin"
            android:text="@string/INPUT_NUM_INSTRU"
            android:layout_width="wrap_content"/>

    <EditText android:id="@+id/numUnit"
            android:layout_height="wrap_content"
              android:inputType="number"
              android:layout_width="50dp"
              app:layout_constraintStart_toStartOf="@id/vguide1"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@id/hguide5"/>

    <Button
            android:id="@+id/commit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numUnit"
            android:text="@string/COMMIT"/>

</androidx.constraintlayout.widget.ConstraintLayout>